--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "url": "https://github.com/thechinnster/library-test.git/issues"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+        "@material-ui/core": "^3.1.2"
+  },
   "devDependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
